--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 <html>
 <body>
     <div class="login">
-        
+     
        <form action="{{ url_for('predict_datapoint')}}" method="post">
         <h1>
-            <legend>Student Exam Performance Predictor</legend>
+            <legend>Welcome to Student Exam Performance Predictor</legend>
         </h1>
        <div class="mb-3">
             <label class="form-label">Gender</label>
