--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
         </form>
     </div>
     <h2>
-       THE  prediction is {{results}}
+       Your Maths score would be {{results}}
     </h2>
    <body>
 </html>
